force-app/main/default/objects/product_configuration__c/product_configuration__c.object-meta.xml
<CustomObject>
    <label>product configuration</label>
    <nameField>
        <label>product configutation-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>product configurationS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>