force-app/main/default/objects/product_configuration__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>configuration_element__c</referenceTo>
    <relationshipLabel>product configurationS (Form)</relationshipLabel>
    <relationshipName>product_configurationS1</relationshipName>
    <type>Lookup</type>
</CustomField>