force-app/main/default/objects/product_configuration__c/fields/main_ingredient__c.field-meta.xml
<CustomField>
    <fullName>main_ingredient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>main ingredient</label>
    <referenceTo>configuration_element__c</referenceTo>
    <relationshipLabel>product configurationS</relationshipLabel>
    <relationshipName>product_configurationS</relationshipName>
    <type>Lookup</type>
</CustomField>