force-app/main/default/objects/product_configuration__c/fields/main_sweetener__c.field-meta.xml
<CustomField>
    <fullName>main_sweetener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>main sweetener</label>
    <referenceTo>configuration_element__c</referenceTo>
    <relationshipLabel>product configurationS (main sweetener)</relationshipLabel>
    <relationshipName>product_configurationS2</relationshipName>
    <type>Lookup</type>
</CustomField>