force-app/main/default/objects/product_configuration__c/fields/Produkt__c.field-meta.xml
<CustomField>
    <fullName>Produkt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produkt</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>product configurationS</relationshipLabel>
    <relationshipName>product_configurationS</relationshipName>
    <type>Lookup</type>
</CustomField>