force-app/main/default/objects/product_configuration__c/fields/status_of_configuration__c.field-meta.xml
<CustomField>
    <fullName>status_of_configuration__c</fullName>
    <label>status of configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending</fullName>
            </value>
            <value>
                <fullName>denied</fullName>
            </value>
            <value>
                <fullName>approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>