force-app/main/default/objects/product_configuration__c/fields/variations__c.field-meta.xml
<CustomField>
    <fullName>variations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>variations</label>
    <referenceTo>configuration_element__c</referenceTo>
    <relationshipLabel>product configurationS (variations)</relationshipLabel>
    <relationshipName>product_configurationS3</relationshipName>
    <type>Lookup</type>
</CustomField>